codex-rs/tui/src/snapshots/codex_tui__model_migration__tests__model_migration_prompt.snap
---
source: tui/src/model_migration.rs
expression: terminal.backend()
---
> Codex Kaioken just got an upgrade. Introducing gpt-5.1-cod

  Codex Kaioken is now powered by gpt-5.1-codex-max, our
  latest frontier agentic coding model. It is smarter and
  faster than its predecessors and capable of long-running
  project-scale work.

  Learn more at www.openai.com/index/gpt-5-1-codex-max.

  Choose how you'd like Codex Kaioken to proceed.

› 1. Try new model
  2. Use existing model

  Use ↑/↓ to move, press enter to confirm
